poke: remove support for maps
2024-06-12  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac (AC_CONFIG_fILES): Do not process maps/Makefile.in.
	* Makefile.am (SUBDIRS): Do not recurse in maps/.
	* maps/Makefile.am: Remove.
	* maps/mp3.map: Likewise.
	* maps/elf.map: Likewise.
	* maps/dwarf.map: Likewise.
	* poke/pk-map-tab.y: Likewise.
	* poke/pk-map-parser.h: Likewise.
	* poke/pk-map-lex.l: Likewise.
	* poke/pk-map.pk: Likewise.
	* poke/pk-map.h: Likewise.
	* poke/pk-map.c: Likewise.
	* poke/pk-cmd-map.c: Likewise.
	* etc/poke-map-mode.el: Remove.
	* etc/Makefile.am (dist_lisp_DATA): Remove poke-map-mode.el.
	* poke/Makefile.am (dist_app_DATA): Remove pk-map.pk.
	(poke_SOURCES): Remove pk-cmd-map.c, pk-map.c, pk-map.h,
	pk-map-parser.h, pk-map-tab.c pk-map-lex.l.
	(generate-pk-map-lex): Remove rule.
	(generate-pk-map-tab): Likewise.
	(AM_YFLAGS): Remove.
	* doc/poke.texi (Maps and Map-files): Remove chapter.
	(poke-map-mode): Do not mention poke-map-mode.
	* poke/pk-ios.c: Do not include pk-map.h.
	(pk_open_file_maps): Remove.
	* poke/pk-cmd-ios.c: Do not include pk-map.h.
	* poke/pk-repl.c: Do not include pk-map.h.
	(pk_prompt): Do not add map info to the prompt.
	* poke/poke.c: Do not include pk-map.h.
	(finalize): Do not pk_map_shutdown.
	(initialize): Do not pk_map_init.
	* testsuite/poke.cmd/maps-1.pk: Remove.
	* testsuite/poke.cmd/maps-2.pk: Likewise.
	* testsuite/poke.cmd/maps-3.pk: Likewise.
	* testsuite/poke.cmd/maps-4.pk: Likewise.
	* testsuite/poke.cmd/maps-5.pk: Likewise.
	* testsuite/poke.cmd/maps-6.pk: Likewise.
	* testsuite/poke.cmd/maps-7.pk: Likewise.
	* testsuite/poke.cmd/maps-8.pk: Likewise.
	* testsuite/poke.cmd/maps-9.pk: Likewise.
	* testsuite/poke.cmd/maps-alien-1.pk: Likewise.
	* poke/pk-settings.pk: Remove setting for auto-map and
	prompt-maps.
	* testsuite/Makefile.am (EXTRA_DIST): Remove maps related tests.

--- a/poke/Makefile.am
+++ b/poke/Makefile.am
@@ -30,7 +30,7 @@ appdir = $(pkgdatadir)/poke
 
 dist_app_DATA = pk-cmd.pk pk-dump.pk pk-save.pk pk-copy.pk pk-diff.pk \
                 pk-extract.pk pk-scrabble.pk poke.pk pk-settings.pk \
-                pk-help.pk pk-map.pk pk-tracer.pk pk-cmd-info.pk pk-cmd-ios.pk
+                pk-help.pk pk-tracer.pk pk-cmd-info.pk pk-cmd-ios.pk
 
 bin_PROGRAMS = poke
 poke_SOURCES = poke.c poke.h \
@@ -40,10 +40,8 @@ poke_SOURCES = poke.c poke.h \
                pk-cmd.c pk-cmd.h \
                pk-cmd-ios.c pk-cmd-info.c pk-cmd-misc.c \
                pk-cmd-help.c pk-cmd-def.c pk-cmd-vm.c pk-cmd-compiler.c \
-               pk-cmd-set.c pk-cmd-editor.c pk-cmd-map.c \
-               pk-ios.c pk-ios.h \
-               pk-map.c pk-map.h pk-map-parser.h \
-               pk-map-tab.c pk-map-lex.l
+               pk-cmd-set.c pk-cmd-editor.c \
+               pk-ios.c pk-ios.h
 
 poke_SOURCES += ../common/pk-utils.c ../common/pk-utils.h
 
@@ -60,91 +58,6 @@ poke_LDADD = $(top_builddir)/gl/libgnu.la \
              $(LTLIBTEXTSTYLE) \
              $(LTLIBTERMINFO)
 poke_LDFLAGS =
-
-
-AM_LFLAGS = -d
-# The Automake generated .l.c rule is broken: When executed in a VPATH build,
-#   - The .c file gets generated in the build directory. But since it requires
-#     special tools to rebuild it, we need to distribute it in the tarballs,
-#     and by the GNU Coding Standards
-#     <https://www.gnu.org/prep/standards/html_node/Makefile-Basics.html>
-#     the file should be generated in the source directory.
-#   - The #line directives in the .c file refer to a nonexistent file once it
-#     has been moved from the build directory to the source directory. This
-#     leads to error if 'lcov' is used later.
-# Additionally, here we assume Flex and therefore don't need the ylwrap script.
-# Therefore we override this rule.
-# Since this is a rule that produces multiple files, we apply the idiom from
-# <https://lists.gnu.org/archive/html/bug-make/2020-09/msg00008.html>, so that
-# it works also in parallel 'make'.
-generate-pk-map-lex:
-	$(AM_V_LEX)$(LEX) $(LFLAGS) $(AM_LFLAGS) -t $(srcdir)/pk-map-lex.l > pk-map-lex.c \
-	&& test ':' = '$(LEX)' || { \
-	  sed -e 's|".*/pk-map-lex\.l"|"pk-map-lex.l"|' \
-	      -e 's|"lex\.yy\.c"|"pk-map-lex.c"|' \
-	      < pk-map-lex.c > pk-map-lex.c-tmp \
-	  && sed -e 's|".*/pk-map-lex\.l"|"pk-map-lex.l"|' \
-	         < pk-map-lex.h > pk-map-lex.h-tmp \
-	  && rm -f pk-map-lex.c pk-map-lex.h \
-	  && mv pk-map-lex.c-tmp $(srcdir)/pk-map-lex.c \
-	  && mv pk-map-lex.h-tmp $(srcdir)/pk-map-lex.h; \
-	}
-.PHONY: generate-pk-map-lex
-# The above rule will generate files with time-stamp order
-# pk-map-lex.l <= pk-map-lex.c <= pk-map-lex.h.
-pk-map-lex.c: pk-map-lex.l
-	@{ test -f $(srcdir)/pk-map-lex.c && test ! $(srcdir)/pk-map-lex.c -ot $(srcdir)/pk-map-lex.l; } || $(MAKE) generate-pk-map-lex
-pk-map-lex.h: pk-map-lex.c
-	@{ test -f $(srcdir)/pk-map-lex.h && test ! $(srcdir)/pk-map-lex.h -ot $(srcdir)/pk-map-lex.c; } || $(MAKE) generate-pk-map-lex
-BUILT_SOURCES += pk-map-lex.c pk-map-lex.h
-MOSTLYCLEANFILES += pk-map-lex.c-tmp pk-map-lex.h-tmp
-MAINTAINERCLEANFILES += $(srcdir)/pk-map-lex.c $(srcdir)/pk-map-lex.h
-EXTRA_DIST += pk-map-lex.l pk-map-lex.c pk-map-lex.h
-
-AM_YFLAGS = -t --report=state
-# The Automake generated .y.c rule is broken: When executed in a VPATH build,
-#   - The .c file gets generated in the build directory. But since it requires
-#     special tools to rebuild it, we need to distribute it in the tarballs,
-#     and by the GNU Coding Standards
-#     <https://www.gnu.org/prep/standards/html_node/Makefile-Basics.html>
-#     the file should be generated in the source directory.
-#   - The #line directives in the .c file refer to a nonexistent file once it
-#     has been moved from the build directory to the source directory. This
-#     leads to error if 'lcov' is used later.
-# Additionally, here we assume GNU Bison and therefore don't need the ylwrap
-# script.
-# Therefore we override this rule.
-# Since this is a rule that produces multiple files, we apply the idiom from
-# <https://lists.gnu.org/archive/html/bug-make/2020-09/msg00008.html>, so that
-# it works also in parallel 'make'.
-generate-pk-map-tab:
-	$(AM_V_YACC)$(POKE_BISON) -d $(YFLAGS) $(AM_YFLAGS) $(srcdir)/pk-map-tab.y \
-	&& test ':' = '$(POKE_BISON)' || { \
-	  sed -e 's|".*/pk-map-tab\.y"|"pk-map-tab.y"|' \
-	      -e 's|"pk-map-tab\.tab\.c"|"pk-map-tab.c"|' \
-	      -e 's|"pk-map-tab\.tab\.h"|"pk-map-tab.h"|' \
-	      < pk-map-tab.tab.c > pk-map-tab.c-tmp \
-	  && sed -e 's|".*/pk-map-tab\.y"|"pk-map-tab.y"|' \
-	         -e 's|"pk-map-tab\.tab\.h"|"pk-map-tab.h"|' \
-	         < pk-map-tab.tab.h > pk-map-tab.h-tmp \
-	  && rm -f pk-map-tab.tab.c pk-map-tab.tab.h \
-	  && mv pk-map-tab.c-tmp $(srcdir)/pk-map-tab.c \
-	  && mv pk-map-tab.h-tmp $(srcdir)/pk-map-tab.h; \
-	}
-.PHONY: generate-pk-map-tab
-# The above rule will generate files with time-stamp order
-# pk-map-tab.y <= pk-map-tab.c <= pk-map-tab.h.
-pk-map-tab.c: pk-map-tab.y
-	@{ test -f $(srcdir)/pk-map-tab.c && test ! $(srcdir)/pk-map-tab.c -ot $(srcdir)/pk-map-tab.y; } || $(MAKE) generate-pk-map-tab
-pk-map-tab.h: pk-map-tab.c
-	@{ test -f $(srcdir)/pk-map-tab.h && test ! $(srcdir)/pk-map-tab.h -ot $(srcdir)/pk-map-tab.c; } || $(MAKE) generate-pk-map-tab
-BUILT_SOURCES += pk-map-tab.c pk-map-tab.h
-MOSTLYCLEANFILES += \
-  pk-map-tab.tab.c pk-map-tab.tab.h \
-  pk-map-tab.c-tmp pk-map-tab.h-tmp \
-  pk-map-tab.output
-MAINTAINERCLEANFILES += $(srcdir)/pk-map-tab.c $(srcdir)/pk-map-tab.h
-EXTRA_DIST += pk-map-tab.y pk-map-tab.c pk-map-tab.h
 
 if HSERVER
   poke_SOURCES += pk-hserver.h pk-hserver.c
