poke: uniformize names for Poke command files
2024-06-12  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-extract.pk: Rename pk-extract.pk.
	* poke/pk-cmd-diff.pk: Rename from pk-diff.pk.
	* poke/pk-cmd-copy.pk: Rename from pk-copy.pk.
	* poke/pk-cmd-dump.pk: Rename from pk-dump.pk.
	* poke/pk-cmd-scrabble.pk: Rename from pk-scrabble.pk.
	* poke/pk-cmd-save.pk: Rename from pk-save.pk.
	* poke/pk-cmd-set.pk: Renamed from pk-settings.pk.
	* poke/pk-cmd-help.pk: Renamed from pk-help.pk.
	* poke/Makefile.am (dist_app_DATA): Reflect renaming.

--- a/poke/Makefile.am
+++ b/poke/Makefile.am
@@ -28,9 +28,19 @@ EXTRA_DIST =
 
 appdir = $(pkgdatadir)/poke
 
-dist_app_DATA = pk-cmd.pk pk-dump.pk pk-save.pk pk-copy.pk pk-diff.pk \
-                pk-extract.pk pk-scrabble.pk poke.pk pk-settings.pk \
-                pk-help.pk pk-tracer.pk pk-cmd-info.pk pk-cmd-ios.pk
+dist_app_DATA = poke.pk \
+                pk-tracer.pk \
+                pk-cmd.pk \
+                pk-cmd-dump.pk \
+                pk-cmd-save.pk \
+                pk-cmd-copy.pk \
+                pk-cmd-diff.pk \
+                pk-cmd-extract.pk \
+                pk-cmd-scrabble.pk \
+                pk-cmd-set.pk \
+                pk-cmd-help.pk \
+                pk-cmd-info.pk \
+                pk-cmd-ios.pk
 
 bin_PROGRAMS = poke
 poke_SOURCES = poke.c poke.h \
