poke: rewrite .jmd in Poke
2024-06-12  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-misc.pk: New file.
	* poke/poke.pk: Load pk-cmd-misc.pk.
	* poke/Makefile.am (dist_app_DATA): Add pk-cmd-misc.pk.
	* poke/pk-cmd-misc.c (pk_cmd_jmd): Call to Poke version of
	pk_cmd_jmd.

--- a/poke/Makefile.am
+++ b/poke/Makefile.am
@@ -40,7 +40,8 @@ dist_app_DATA = poke.pk \
                 pk-cmd-set.pk \
                 pk-cmd-help.pk \
                 pk-cmd-info.pk \
-                pk-cmd-ios.pk
+                pk-cmd-ios.pk \
+                pk-cmd-misc.pk
 
 bin_PROGRAMS = poke
 poke_SOURCES = poke.c poke.h \
