pkl: fix `nframes' tracking in try-catch statement
The following form of try-catch doesn't introduce a new
lexical frame:

	try {} catch if E_... {}

2024-06-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans1_pr_try_stmt_handler): Fix
	`nframes' tracking to only change iff we're using try-catch
	with argument form: `try {...} catch (Exception ex) {...}'.
	* (pkl_trans1_ps_try_stmt_handler): Likewise.
	* testsuite/poke.pkl/break-while-4.pk: New test.
	* testsuite/poke.pkl/break-while-5.pk: Likewise.
	* testsuite/poke.pkl/break-while-6.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1094,6 +1094,9 @@ EXTRA_DIST = \
   poke.pkl/break-while-1.pk \
   poke.pkl/break-while-2.pk \
   poke.pkl/break-while-3.pk \
+  poke.pkl/break-while-4.pk \
+  poke.pkl/break-while-5.pk \
+  poke.pkl/break-while-6.pk \
   poke.pkl/builtins-1.pk \
   poke.pkl/cast-any-to-function-diag-1.pk \
   poke.pkl/cast-array-1.pk \
