testsuite: add a new test for `break' statement
2024-06-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* testsuite/poke.pkl/break-while-7.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1097,6 +1097,7 @@ EXTRA_DIST = \
   poke.pkl/break-while-4.pk \
   poke.pkl/break-while-5.pk \
   poke.pkl/break-while-6.pk \
+  poke.pkl/break-while-7.pk \
   poke.pkl/builtins-1.pk \
   poke.pkl/cast-any-to-function-diag-1.pk \
   poke.pkl/cast-array-1.pk \
