pickles: add crc16.pk
Add a pickle to gather CRC algorithms with 16 bits.

2024-09-07  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/crc16.pk: New pickle for 16-bit CRCs.
	* testsuite/poke.pickles/crc16-test.pk: New file.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -604,6 +604,7 @@ EXTRA_DIST = \
   poke.pickles/asn1-ber-test.pk \
   poke.pickles/base64-test.pk \
   poke.pickles/bmp-test.pk \
+  poke.pickles/crc16-test.pk \
   poke.pickles/gcov-test.pk \
   poke.pickles/bpf-test.pk \
   poke.pickles/btf-ext-test.pk \
