build: revert doc/gendocs_template in the bootstrap epilogue
This avoid bootstrap to override our customized template.  Thanks to
Bruno Haible to suggest this fix to this problem.

2024-09-24  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (bootstrap_epilogue): Define.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -274,3 +274,10 @@ bootstrap_post_pull_hook ()
     git submodule update --init -- ./jitter
   fi
 }
+
+# Epilogue
+bootstrap_epilogue ()
+{
+  # The gendocs gnulib module overwrites our modified template.
+  git diff doc/gendocs_template | patch -p1 -R
+}
