poke: add new dot-command .bases
2024-09-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poke/pk-cmd-misc.c ("pk-repl.h"): New include for
	`poke_completion_function'.
	(pk_cmd_bases): New function to implement
	`.bases' dot-command.
	(bases_cmd): New variable.
	* poke/pk-cmd-misc.pk (pk_cmd_bases): New Poke function.
	* poke/pk-cmd.c (dot_cmds): Register the new dot-command.
	* testsuite/poke.cmd/bases-1.pk: New test.
	* testsuite/poke.cmd/bases-2.pk: Likewise.
	* testsuite/poke.cmd/bases-3.pk: Likewise.
	* testsuite/poke.cmd/bases-4.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* doc/poke.texi (Dot-Commands): Add doc for new dot-command.
	* poke/pk-cmd-help.pk: Document new dot-command.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -60,6 +60,10 @@ EXTRA_DIST = \
   lib/poke.exp \
   lib/poke-unit.h \
   poke.cmd/cmd.exp \
+  poke.cmd/bases-1.pk \
+  poke.cmd/bases-2.pk \
+  poke.cmd/bases-3.pk \
+  poke.cmd/bases-4.pk \
   poke.cmd/close-sub-1.pk \
   poke.cmd/copy-1.pk \
   poke.cmd/copy-2.pk \
