pkl: fix flex rule for delimited alien tokens
With this commit, expressions like `$<*0*> + $<*1>' are equivalent to
addition of two literals instead of a single `*0*> + $<*1' token.

2024-10-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-lex.l: Fix pattern for matching delimited alien token
	to not use name definitions inside character class.
	(NOT_GT): New name definition.
	* testsuite/poke.cmd/ios-4.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -92,6 +92,7 @@ EXTRA_DIST = \
   poke.cmd/ios-1.pk \
   poke.cmd/ios-2.pk \
   poke.cmd/ios-3.pk \
+  poke.cmd/ios-4.pk \
   poke.cmd/mmap-1.pk \
   poke.cmd/mmap-2.pk \
   poke.cmd/nbd-1.pk \
