--- a/.gitmodules
+++ b/.gitmodules
@@ -3,5 +3,5 @@
 	url = https://git.sv.gnu.org/git/gnulib.git
 [submodule "jitter"]
 	path = jitter
-	url = https://luca.ageinghacker.net/jitter
+	url = https://git.ageinghacker.net/jitter
 	ignore = dirty
