Handle wide integers correctly in logical operators
Casting operands of the following operators to `int<32>' is not correct
due to possible loss of information by truncation:
  - &&
  - ||
  - =>
  - !

This patch changes compiler to handle integers wider than 32 bits
correctly.

2024-12-29  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.h (pvm_make_integral): New function declaration.
	* libpoke/pvm-val.c (pvm_make_integral): New function moved from
	`libpoke/pvm-val.c'.
	* libpoke/pkl-asm.c (pvm_make_integral): Removed.
	* libpoke/pkl-promo.c (pkl_promo_ps_op_binary): Do not cast to `int<32>'
	for the following operators: `&&', `||' and `=>' to prevent loss of
	information due to possible truncation.
	(pkl_promo_ps_op_unary): Likewise for `!' unary operator.
	* libpoke/pkl-gen.c (pkl_gen_pr_op_and): Change codegen to work correctly
	with operands wider than `int<32>'.
	(pkl_gen_pr_op_or): Likewise.
	(pkl_gen_pr_op_impl): Likewise.
	(pkl_gen_pr_op_not): Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* testsuite/poke.pkl/and-16.pk: New test.
	* testsuite/poke.pkl/and-17.pk: Likewise.
	* testsuite/poke.pkl/and-18.pk: Likewise.
	* testsuite/poke.pkl/and-int-struct-4.pk: Likewise.
	* testsuite/poke.pkl/impl-6.pk: Likewise.
	* testsuite/poke.pkl/or-6.pk: Likewise.
	* testsuite/poke.pkl/or-7.pk: Likewise.
	* testsuite/poke.pkl/or-int-struct-4.pk: Likewise.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -761,11 +761,15 @@ EXTRA_DIST = \
   poke.pkl/and-13.pk \
   poke.pkl/and-14.pk \
   poke.pkl/and-15.pk \
+  poke.pkl/and-16.pk \
+  poke.pkl/and-17.pk \
+  poke.pkl/and-18.pk \
   poke.pkl/and-diag-1.pk \
   poke.pkl/and-diag-2.pk \
   poke.pkl/and-int-struct-1.pk \
   poke.pkl/and-int-struct-2.pk \
   poke.pkl/and-int-struct-3.pk \
+  poke.pkl/and-int-struct-4.pk \
   poke.pkl/apop-1.pk \
   poke.pkl/apop-2.pk \
   poke.pkl/apop-diag-1.pk \
@@ -1669,6 +1673,7 @@ EXTRA_DIST = \
   poke.pkl/impl-3.pk \
   poke.pkl/impl-4.pk \
   poke.pkl/impl-5.pk \
+  poke.pkl/impl-6.pk \
   poke.pkl/impl-diag-1.pk \
   poke.pkl/in-1.pk \
   poke.pkl/in-2.pk \
@@ -2103,10 +2108,13 @@ EXTRA_DIST = \
   poke.pkl/or-3.pk \
   poke.pkl/or-4.pk \
   poke.pkl/or-5.pk \
+  poke.pkl/or-6.pk \
+  poke.pkl/or-7.pk \
   poke.pkl/or-diag-1.pk \
   poke.pkl/or-int-struct-1.pk \
   poke.pkl/or-int-struct-2.pk \
   poke.pkl/or-int-struct-3.pk \
+  poke.pkl/or-int-struct-4.pk \
   poke.pkl/pinned-int-struct-1.pk \
   poke.pkl/pinned-union-diag-1.pk \
   poke.pkl/pos-diag-1.pk \
