pkl: fix while loop to not cast the condition to `int<32>'
2024-12-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-asm.h (pkl_asm_while_loop): Accept new parameter: AST
	type node for the loop condition.
	* libpoke/pkl-asm.c (pkl_asm_while_loop): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_pr_loop_stmt): Pass type of condition to
	`pkl_asm_while_loop' invocation.
	* libpoke/pkl-promo.c (pkl_promo_ps_if_stmt): Removed. That cast is
	wrong due to possible truncation of wider integers.
	* libpoke/ras (.loop): Update `pkl_asm_while_loop' invocation.
	* testsuite/poke.pkl/while-4.pk: New test.
	* testsuite/poke.pkl/while-5.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -2825,6 +2825,8 @@ EXTRA_DIST = \
   poke.pkl/while-1.pk \
   poke.pkl/while-2.pk \
   poke.pkl/while-3.pk \
+  poke.pkl/while-4.pk \
+  poke.pkl/while-5.pk \
   poke.pkl/while-int-struct-1.pk \
   poke.pkl/xor-diag-1.pk \
   poke.pkl/xor-diag-2.pk \
