pkl: fix use of `pushios' insn in codegen
`pushios' insn doesn't raise an exception when there's no open
IOS, instead it pushes a negative number.  This commit fixes the
codegen to raise the expected exception in case of no open IOS.

2025-01-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.pks (RAS_MACRO_PUSHIOS): New macro to extend
	`pushios' insn to raise exception if there's no IOS.
	* libpoke/pkl-gen.c (pkl_gen_pr_map): Replace `pushios' insn with
	`RAS_MACRO_PUSHIOS'.
	* testsuite/poke.pkl/map-diag-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -1890,6 +1890,7 @@ EXTRA_DIST = \
   poke.pkl/lt-strings-1.pk \
   poke.pkl/lt-strings-2.p \
   poke.pkl/luca-suck-this.pk \
+  poke.pkl/map-diag-1.pk \
   poke.pkl/map-diag-2.pk \
   poke.pkl/map-diag-3.pk \
   poke.pkl/map-diag-4.pk \
