pkl: compile closures of alias types
Compiling constructor/mapper/typifier closures of alias types will assure
that they'll use the right name for PVM types (new alias name instead of
the original name).
Compiling comparator/integrator/deintegrator is just for the sake of
consistency.

2025-03-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_decl): Compile constructor/mapper/
	comparator/integrator/deintegrator/typifier for alias types to have
	the correct names.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* testsuite/poke.map/type-alias-1.pk: New test.
	* testsuite/poke.pkl/type-alias-1.pk: Likewise.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -595,6 +595,7 @@ EXTRA_DIST = \
   poke.map/trimmed-map-2.pk \
   poke.map/trimmed-map-3.pk \
   poke.map/trimmed-map-4.pk \
+  poke.map/type-alias-1.pk \
   poke.map/unmap-1.pk \
   poke.map/unmap-2.pk \
   poke.map/unmap-3.pk \
@@ -2763,6 +2764,7 @@ EXTRA_DIST = \
   poke.pkl/try-until-5.pk \
   poke.pkl/try-until-6.pk \
   poke.pkl/try-until-diag-1.pk \
+  poke.pkl/type-alias-1.pk \
   poke.pkl/typename-diag.pk \
   poke.pkl/typeof-1.pk \
   poke.pkl/typeof-2.pk \
