--- a/pickles/Makefile.am
+++ b/pickles/Makefile.am
@@ -29,6 +29,6 @@ dist_pickles_DATA = ctf.pk ctf-dump.pk leb128.pk \
 		    uuid.pk redoxfs.pk pcap.pk ieee754.pk pdap.pk \
                     iscan.pk iscan-str.pk base64.pk gpt-partition-attrs.pk \
 		    gpt-partition-types.pk gpt.pk guid.pk linux.pk srec.pk \
-		    jojodiff.pk jpeg.pk crc16.pk
+		    jojodiff.pk jpeg.pk crc16.pk bpfcore.pk
 
 EXTRA_DIST = README.elf
