Use less overloaded host instead of git.savannah.gnu.org.
* .gitmodules (gnulib): Use specialized host for https checkout.
* Makefile.am (cyclo-$(PACKAGE).html): Use specialized host for gitweb protocol.
* doc/poke.texi (poked): Use specialized host for cgit protocol.
* doc/pokeint.texi (Git repos): Likewise.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "gnulib"]
 	path = gnulib
-	url = https://git.sv.gnu.org/git/gnulib.git
+	url = https://https.git.savannah.gnu.org/git/gnulib.git
 [submodule "jitter"]
 	path = jitter
 	url = https://git.ageinghacker.net/jitter
