pickles: fix output of ptime function in time pickle
Zero-pad day, hour, minute and second numbers.

Thanks to Alberto Donizetti for reporting this issue.

2025-10-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/time.pk (ptime_str): New function to return string instead of
	printing the time on stdout.  This function zero-pad two-digits numbers
	for `day', `hour', `minute' and `seconds'.
	(ptime): Update to use `ptime_str'.
	* testsuite/poke.pickles/time-test.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* testsuite/poke.time/time32.pk: Update outputs accordingly.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -632,6 +632,7 @@ EXTRA_DIST = \
   poke.pickles/sframe-test.pk \
   poke.pickles/srec-test.pk \
   poke.pickles/search-test.pk \
+  poke.pickles/time-test.pk \
   poke.pickles/ustar-test.pk \
   poke.pickles/color-test.pk \
   poke.pickles/mbr-test.pk \
